--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
     <p class="text-center">Copyright ©2017 Rails sinema
         <br>Design by
-        <a href="http://courses.growthschool.com/courses/rails-101/" target=_new>zhuozhi12</a>
+        <a href="http://zhuozhi12-blog.logdown.com" target=_new>zhuozhi12</a>
     </p>
 </footer>
