--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
 
   <body>
 
-    <div class="container-fluid"
-    <%= render "common/navbar"
+    <div class="container-fluid">
+    <%= render "common/navbar" %>
     <%= yield %>
   </div>
 
   <%= render "common/footer" %>
-  
+
   </body>
 </html>
