move form to partial

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -4,14 +4,8 @@
     <hr>
     <%= form_for @group do |f| %>
 
-    <% if @group.errors.any? %>
-    <ul>
-      <% @group.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-    <% end %>
-    
+    <%= render "form" %>
+
     電影名
     <%= f.text_field :title %>
     <br>
