--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,18 +1,16 @@
 <%= form_for @group do |f| %>
-<% if @group.errors.any? %>
-<ul>
-  <% @group.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
-電影名
-<%= f.text_field :title %>
-<br>
-電影評論
-<br>
-<%= f.text_area :description %>
-<br>
 
-<%= f.submit "Submit", :disable_with => 'Submiting...' %>
+<div class="form-group">
+    <div class="form-group string optional">
+        <%= f.label "電影名", :class => "string optional control-label" %>
+        <%= f.text_field :title, :class => "string optional form-control" %>
+    </div>
+
+    <div class="form-group string optional">
+        <%= f.label "電影評論", :class => "string optional control-label" %>
+        <%= f.text_area :description, :class => "string optional form-control" %>
+    </div>
+
+</div>
+<%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
 <% end %>
