--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,16 +1,7 @@
-<%= form_for @group do |f| %>
-
-<div class="form-group">
-    <div class="form-group string optional">
-        <%= f.label "電影名", :class => "string optional control-label" %>
-        <%= f.text_field :title, :class => "string optional form-control" %>
-    </div>
-
-    <div class="form-group string optional">
-        <%= f.label "電影評論", :class => "string optional control-label" %>
-        <%= f.text_area :description, :class => "string optional form-control" %>
-    </div>
-
-</div>
-<%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
+<%= simple_form_for @group do |f| %>
+  <div class="form-group">
+    <%= f.input :title, input_html: { class: "form-control"} %>
+    <%= f.input :description, input_html: { class: "form-control"} %>
+  </div>
+  <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
 <% end %>
