--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="group">
-    <%= link_to("新增討論", new_group_path, class: "btn btn-primary pull-right") %>
+    <%= link_to("新增評論", new_group_path, class: "btn btn-primary pull-right") %>
   </div>
   <table class="table table-hover">
     <thead>
