--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,7 @@
         <td>#</td>
         <td>電影名</td>
         <td>電影評論</td>
+        <td>評論人 </td>
       </tr>
     </thead>
     <tbody>
@@ -16,6 +17,7 @@
           <td>#</td>
           <td><%= link_to(group.title, group_path(group)) %></td>
           <td><%= group.description %></td>
+          <td> <%= group.user.email %> </td>
           <td>
               <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
               <%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
