--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -19,9 +19,9 @@
           <td><%= group.description %></td>
           <td> <%= group.user.email %> </td>
           <td>
-              <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
-              <%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
-                          method: :delete, data: { confirm: "Are you sure?" } )%>
+          <% if current_user && current_user == group.user %>
+             
+            <% end %>
           </td>
         </tr>
       <% end %>
