join & quit group action

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,8 +4,10 @@
     <span class="pull-right">
   <% if current_user && current_user.is_member_of?(@group) %>
     <label class="label label-success"> 收藏 </label>
+    <%= link_to("不收藏", quit_group_path(@group), method: :post, class: "btn btn-default") %>
   <% else %>
     <label class="label label-warning"> 不收藏 </label>
+    <%= link_to("收藏", join_group_path(@group), method: :post, class: "btn btn-default") %>
   <% end %>
 </span>
 
