implement my posts

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,7 +19,8 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                      <li> <%= link_to("我发布的评论", account_groups_path) %></li>
+                      <li> <%= link_to("我的收藏", account_groups_path) %></li>
+                      <li> <%= link_to("我的发布", account_posts_path) %></li>
     <li class="divider"> </li>
                         <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </li>
                     </ul>
