--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,19 +12,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td>#</td>
-          <td><%= link_to(group.title, group_path(group)) %></td>
-      <td><%= render_group_description(group) %></td>
-      <td> <%= group.user.email %> </td>
-          <td>
-          <% if current_user && current_user == group.user %>
-
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
+    <%= render :partial => "group_item", :collection => @groups, :as => :group %>
     </tbody>
   </table>
 </div>
